# ml_final_project

./: .gitignore  LICENSE  README.md  setup.cfg
notebooks/: friedman_posthoc_tests.ipynb
src/ml_final_project/: consts.py  run_simulation.py
src/ml_final_project/optimizers/: improved_lookahead.py
src/ml_final_project/utils/data/: dataset2xy.py  load.py
src/ml_final_project/utils/evaluators/: default.py  requested.py
src/ml_final_project/utils/hyperparameters/: hyperparameter_scanner.py
src/ml_final_project/utils/nn/: network.py
src/ml_final_project/utils/runners/: base_runner.py  runners_factory.py
src/ml_final_project/utils/runners/specific/: improved_lookahead.py  lookahead.py  momentum.py
src/ml_final_project/utils/simulators/: dataset_simulator.py
