[metadata]
name = ml_final_project
version = 0.0.2
author = Yuval O
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuvalot/ml_final_project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tensorflow_addons
    bayesian-optimization
    keras
    tensorflow
    pandas
    sklearn
    tqdm
    numpy
    typeguard

[options.packages.find]
where = src
